--- a/style.css
+++ b/style.css
@@ -29,14 +29,14 @@ body {
   display: flex;
   justify-content: space-around; }
 
-#navigation a, #navigation li {
+#navigation li {
   cursor: pointer;
   font-family: 'kingthings_calligraphica_2Rg';
   font-size: 40px;
   color: black;
   transform: scale(1);
   transition: transform 200ms; }
-  #navigation a:hover, #navigation li:hover {
+  #navigation li:hover {
     color: #777445;
     transform: scale(1.1); }
 
@@ -50,16 +50,26 @@ body {
     margin-top: -10px;
     margin-left: 40px; }
 
-  #navigation ul {
+  #navigation ul, #navigation li {
     position: relative;
     list-style: none;
+    padding-top: 50px;
     margin-left: -5px;
-    margin-top: 120px;
+    margin-top: 10px;
     display: flex;
     flex-direction: column;
-    align-items: center; }
-
-  #navigation a {
+    align-items: center;
     font-size: 30px; } }
+/* ------------------------------------ Contact ----------------------------*/
+#contact {
+  display: flex;
+  border: solid black 1px;
+  border-radius: 10px;
+  background-color: brown; }
+
+#contact p {
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center; }
 
 /*# sourceMappingURL=style.css.map */
