--- a/style.scss
+++ b/style.scss
@@ -31,7 +31,7 @@ body {
     display: flex;
     justify-content: space-around;
 }
-#navigation a, #navigation li {
+#navigation li {
     cursor: pointer;
     font-family: 'kingthings_calligraphica_2Rg';
     font-size: 40px;
@@ -57,16 +57,31 @@ body {
     margin-top: -10px;
     margin-left: 40px;
     }
-    #navigation ul {
+    #navigation ul, #navigation li {
         position: relative;
         list-style: none;
+        padding-top: 50px;
         margin-left: -5px;
-        margin-top: 120px;
+        margin-top: 10px;
         display: flex;
         flex-direction: column;
         align-items: center;
-    } 
-    #navigation a {
         font-size: 30px;
     }
+
+}
+
+/* ------------------------------------ Contact ----------------------------*/
+
+#contact {
+    display: flex;
+    border: solid black 1px;
+    border-radius: 10px;
+    background-color: brown;
+}
+
+#contact p {
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
 }
