--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ html, body, #bloc_page {
   height: 100%; }
 
 body {
-  background: url(ressources/Fond.jpeg) fixed no-repeat;
+  background: url(ressources/fond.jpg) fixed no-repeat;
   background-size: cover;
   margin: 0px;
   text-align: center;
@@ -79,30 +79,42 @@ body {
       padding-top: 25px; } }
 
 /* -----------------------------------Accueil ---------------------------- */
+/* ----------------------------------- Demarches ---------------------------- */
+#demarches {
+  background-color: rgba(220, 220, 220, 0.431);
+  border: solid 1 px black;
+  border-radius: 15px;
+  padding: 10px;
+  margin-top: 15px; }
+
+#btnDemarches {
+  cursor: pointer; }
+
 /* ------------------------------------ Contact ----------------------------*/
 #contact {
   display: none; }
 
-form {
+#contact form {
   /* Uniquement centrer le formulaire sur la page */
   margin: 0 auto;
   width: 400px;
   margin-top: 50px;
   /* Encadré pour voir les limites du formulaire */
   padding: 1em;
+  background-color: rgba(240, 248, 255, 0.424);
   border: 1px solid #CCC;
   border-radius: 1em; }
 
-form div + div {
+#contact form div + div {
   margin-top: 1em; }
 
-label {
+#contact label {
   /* Pour être sûrs que toutes les étiquettes ont même taille et sont correctement alignées */
   display: inline-block;
   width: 90px;
   text-align: right; }
 
-input, textarea {
+#contact input, textarea {
   /* Pour s'assurer que tous les champs texte ont la même police.
      Par défaut, les textarea ont une police monospace */
   font: 1em sans-serif;
@@ -112,22 +124,22 @@ input, textarea {
   /* Pour harmoniser le look & feel des bordures des champs texte */
   border: 1px solid #999; }
 
-input:focus, textarea:focus {
+#contact input:focus, #contact textarea:focus {
   /* Pour souligner légèrement les éléments actifs */
   border-color: #000; }
 
-textarea {
+#contact textarea {
   /* Pour aligner les champs texte multi‑ligne avec leur étiquette */
   vertical-align: top;
   /* Pour donner assez de place pour écrire du texte */
   height: 5em; }
 
-.button {
+#contact .button {
   /* Pour placer le bouton à la même position que les champs texte */
   padding-left: 90px;
   /* même taille que les étiquettes */ }
 
-button {
+#contact button {
   /* Cette marge supplémentaire représente grosso modo le même espace que celui
      entre les étiquettes et les champs texte */
   margin-left: .5em; }
