--- a/style.css
+++ b/style.css
@@ -64,23 +64,36 @@ body {
     #navigation ul {
       margin-top: 25px; } }
 
-#navigation li {
+.btn {
   cursor: pointer;
   font-family: 'kingthings_calligraphica_2Rg';
   font-size: 40px;
   color: black;
   transform: scale(1);
   transition: transform 200ms; }
-  #navigation li:hover {
-    color: #777445;
-    transform: scale(1.1); }
-  @media screen and (max-width: 1000px) {
-    #navigation li {
-      padding-top: 25px; } }
+
+@media screen and (max-width: 1000px) {
+  padding-top: 25px; }
+.active {
+  color: #777445; }
+
+.btn:hover {
+  transform: scale(1.1); }
+
+.nonActive {
+  color: black;
+  transform: scale(1); }
+
+/* ---------------------------------- CLASSES JS NAVIGATION ----------------------- */
+.closed {
+  display: none; }
+
+.opened {
+  display: block; }
 
 /* -----------------------------------Accueil ---------------------------- */
 /* ----------------------------------- Demarches ---------------------------- */
-#demarches {
+#DEMARCHES {
   background-color: white;
   border: solid 1 px #777445;
   border-radius: 15px;
@@ -94,7 +107,7 @@ body {
   justify-content: space-around; }
 
 /* ------------------------------------ Contact ----------------------------*/
-#contact form {
+#CONTACT form {
   /* Uniquement centrer le formulaire sur la page */
   margin: 0 auto;
   width: 400px;
@@ -105,16 +118,16 @@ body {
   border: solid 1 px #777445;
   border-radius: 1em; }
 
-#contact form div + div {
+#CONTACT form div + div {
   margin-top: 1em; }
 
-#contact label {
+#CONTACT label {
   /* Pour être sûrs que toutes les étiquettes ont même taille et sont correctement alignées */
   display: inline-block;
   width: 90px;
   text-align: right; }
 
-#contact input, textarea {
+#CONTACT input, textarea {
   /* Pour s'assurer que tous les champs texte ont la même police.
      Par défaut, les textarea ont une police monospace */
   font: 1em sans-serif;
@@ -124,22 +137,22 @@ body {
   /* Pour harmoniser le look & feel des bordures des champs texte */
   border: solid 1 px #777445; }
 
-#contact input:focus, #contact textarea:focus {
+#CONTACT input:focus, #contact textarea:focus {
   /* Pour souligner légèrement les éléments actifs */
   border: solid 1 px #777445; }
 
-#contact textarea {
+#CONTACT textarea {
   /* Pour aligner les champs texte multi‑ligne avec leur étiquette */
   vertical-align: top;
   /* Pour donner assez de place pour écrire du texte */
   height: 5em; }
 
-#contact .button {
+#CONTACT .button {
   /* Pour placer le bouton à la même position que les champs texte */
   padding-left: 90px;
   /* même taille que les étiquettes */ }
 
-#contact button {
+#CONTACT button {
   /* Cette marge supplémentaire représente grosso modo le même espace que celui
      entre les étiquettes et les champs texte */
   margin-left: .5em; }
