Début du projet Démarches

--- a/style.css
+++ b/style.css
@@ -71,14 +71,13 @@ body {
   color: black;
   transform: scale(1);
   transition: transform 200ms; }
+  .btn:hover {
+    transform: scale(1.1); }
 
 @media screen and (max-width: 1000px) {
   padding-top: 25px; }
 .active {
   color: #777445; }
-
-.btn:hover {
-  transform: scale(1.1); }
 
 .nonActive {
   color: black;
@@ -100,11 +99,21 @@ body {
   padding: 10px;
   margin-top: 15px; }
 
-#demarchesOnline, #Naissance, #Mariage, #Deces {
+.btnDemarche {
+  margin: 20px;
+  display: inline-block;
+  border-radius: 15px; }
+
+.btnDemarche {
   cursor: pointer; }
 
-#menuActe1 {
-  justify-content: space-around; }
+#menuEtatCivil1 {
+  display: none; }
+
+.menuDemarches {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 50px; }
 
 /* ------------------------------------ Contact ----------------------------*/
 #CONTACT form {
