--- a/style.scss
+++ b/style.scss
@@ -75,6 +75,9 @@ body {
     color: black;
     transform: scale(1);
     transition: transform 200ms;
+      &:hover {
+      transform: scale(1.1) 
+    }
     }
     @media screen and (max-width: 1000px) {
       padding-top: 25px;
@@ -82,10 +85,6 @@ body {
 
 .active {
   color: rgb(119, 116, 69);
-}
-
-.btn:hover {
-  transform: scale(1.1) 
 }
 
 .nonActive {
@@ -111,12 +110,25 @@ body {
   padding: 10px;
   margin-top: 15px;
 }
-#demarchesOnline, #Naissance, #Mariage, #Deces {
+
+.btnDemarche {
+  margin : 20px;
+  display: inline-block;
+  border-radius: 15px;
+}
+
+.btnDemarche {
   cursor: pointer;
 }
 
-#menuActe1 {
+#menuEtatCivil1 {
+  display: none;
+}
+
+.menuDemarches {
+  display: flex;
   justify-content: space-around;
+  margin-top: 50px;
 }
 /* ------------------------------------ Contact ----------------------------*/
 
