Passage des démarches en Jquery

--- a/style.scss
+++ b/style.scss
@@ -120,11 +120,11 @@ body {
 .btnDemarche {
   cursor: pointer;
 }
-
+/*
 #menuEtatCivil1 {
   display: none;
 }
-
+*/
 .menuDemarches {
   display: flex;
   justify-content: space-around;
