--- a/style.css
+++ b/style.css
@@ -107,9 +107,11 @@ body {
 .btnDemarche {
   cursor: pointer; }
 
+/*
 #menuEtatCivil1 {
-  display: none; }
-
+  display: none;
+}
+*/
 .menuDemarches {
   display: flex;
   justify-content: space-around;
