Menu démarches avant optimisation

--- a/style.css
+++ b/style.css
@@ -79,18 +79,6 @@ body {
 .active {
   color: #777445; }
 
-.nonActive {
-  color: black;
-  transform: scale(1); }
-
-/* ---------------------------------- CLASSES JS NAVIGATION ----------------------- */
-.closed {
-  display: none; }
-
-.opened {
-  display: block; }
-
-/* -----------------------------------Accueil ---------------------------- */
 /* ----------------------------------- Demarches ---------------------------- */
 #DEMARCHES {
   background-color: white;
@@ -99,23 +87,81 @@ body {
   padding: 10px;
   margin-top: 15px; }
 
-.btnDemarche {
-  margin: 20px;
+.choixDemarche .choixActe {
+  margin: 10px;
   display: inline-block;
-  border-radius: 15px; }
+  border-radius: 15px;
+  cursor: pointer;
+  margin-bottom: -10px; }
 
-.btnDemarche {
-  cursor: pointer; }
-
-/*
-#menuEtatCivil1 {
-  display: none;
-}
-*/
-.menuDemarches {
+.menuDemarches2.opened {
   display: flex;
-  justify-content: space-around;
-  margin-top: 50px; }
+  justify-content: space-around; }
+  .menuDemarches2.opened + h2 {
+    display: inline-block; }
+
+.menuDemarches2, .menuDemarches3 {
+  display: none; }
+
+#etatCivil {
+  display: inline-block;
+  height: 50px;
+  width: 50px;
+  background: url(Ressources/LogoActe1.png) 0 0 no-repeat; }
+  #etatCivil:hover {
+    background-position: -50px 0px; }
+  #etatCivil:hover + h3 {
+    color: #777445; }
+
+#etatCivil.active {
+  background-position: -50px 0px; }
+  #etatCivil.active + h3 {
+    color: #777445; }
+
+#Naissance {
+  display: inline-block;
+  height: 100px;
+  width: 100px;
+  background: url(Ressources/logoNaissance1.png) 0 0 no-repeat; }
+  #Naissance:hover {
+    background-position: -100px 0px; }
+  #Naissance:hover + h3 {
+    color: #777445; }
+
+#Naissance.active {
+  background-position: -100px 0px; }
+  #Naissance.active + h3 {
+    color: #777445; }
+
+#Deces {
+  display: inline-block;
+  height: 100px;
+  width: 100px;
+  background: url(Ressources/logoDeces2.png) 0 0 no-repeat; }
+  #Deces:hover {
+    background-position: -100px 0px; }
+  #Deces:hover + h3 {
+    color: #777445; }
+
+#Deces.active {
+  background-position: -100px 0px; }
+  #Deces.active + h3 {
+    color: #777445; }
+
+#Mariage {
+  display: inline-block;
+  height: 100px;
+  width: 100px;
+  background: url(Ressources/logoMariage2.png) 0 0 no-repeat; }
+  #Mariage:hover {
+    background-position: -100px 0px; }
+  #Mariage:hover + h3 {
+    color: #777445; }
+
+#Mariage.active {
+  background-position: -100px 0px; }
+  #Mariage.active + h3 {
+    color: #777445; }
 
 /* ------------------------------------ Contact ----------------------------*/
 #CONTACT form {
