--- a/police/police.css
+++ b/police/police.css
@@ -1,18 +1,10 @@
+
 @font-face {
-    font-family: 'Butler';
-    src: url('Butler.woff2') format('woff2'),
-        url('Butler.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
+    font-family: "Acme-Regular";
+    src: url('Acme-Regular.ttf') format('truetype');
 }
 
 @font-face {
-    font-family: 'kingthings_calligraphica_2Rg';
-    src: url('Kingthings_Calligraphica_2-webfont.eot');
-    src: url('Kingthings_Calligraphica_2-webfont.eot?#iefix') format('embedded-opentype'),
-         url('Kingthings_Calligraphica_2-webfont.woff') format('woff'),
-         url('Kingthings_Calligraphica_2-webfont.ttf') format('truetype'),
-         url('Kingthings_Calligraphica_2-webfont.svg#kingthings_calligraphica_2Rg') format('svg');
-    font-weight: normal;
-    font-style: normal;
+    font-family: "UglyQua";
+    src: url('UglyQua.ttf') format('truetype');
 }
