--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ html, body, #bloc_page {
 body {
   background: url(ressources/Carte\ ancienne.jpg);
   background-size: cover;
+  background-attachment: local;
   margin: 0px;
   text-align: center;
   display: flex;
@@ -16,6 +17,17 @@ body {
   #bloc_page {
     display: flex;
     justify-content: space-around; } }
+.btnPerso {
+  margin: 10px 0 20px 0;
+  display: inline-block;
+  height: 40px;
+  width: 170px;
+  border-radius: 1em;
+  background-color: rgba(128, 128, 128, 0.363);
+  cursor: pointer;
+  font-size: 2rem;
+  font-family: "UglyQua"; }
+
 /* ----------------------------------- Bandeau ---------------------------------------------- */
 #bandeau {
   background-color: white;
@@ -66,7 +78,7 @@ body {
 
 .btn {
   cursor: pointer;
-  font-family: "kingthings_calligraphica_2Rg";
+  font-family: "UglyQua";
   font-size: 40px;
   color: black;
   transform: scale(1);
@@ -118,7 +130,7 @@ body {
   padding: 10px;
   margin-top: 15px; }
 
-.choixActe {
+.choixActe, .etatCivil {
   margin: 10px;
   display: inline-block;
   border-radius: 15px;
@@ -195,64 +207,40 @@ body {
   #Mariage.active + h3 {
     color: #777445; }
 
-.btnContinue {
-  height: 50px;
-  width: 200px;
-  background-color: #777445;
-  cursor: pointer;
-  font-size: 2.5rem;
-  font-family: "kingthings_calligraphica_2Rg"; }
-
 /* ------------------------------------ Contact ----------------------------*/
-#CONTACT form {
-  /* Uniquement centrer le formulaire sur la page */
-  margin: 0 auto;
-  width: 400px;
-  margin-top: 50px;
-  /* Encadré pour voir les limites du formulaire */
-  padding: 1em;
-  background-color: white;
-  border: solid 1 px #777445;
+#formulaireContact {
+  background-color: rgba(255, 255, 255, 0.5);
+  width: 500px;
+  margin: auto;
+  font-family: "UglyQua";
+  font-size: 30px;
   border-radius: 1em; }
 
-#CONTACT form div + div {
-  margin-top: 1em; }
+input, textarea {
+  font-family: "UglyQua";
+  font-size: 25px; }
 
-#CONTACT label {
-  /* Pour être sûrs que toutes les étiquettes ont même taille et sont correctement alignées */
-  display: inline-block;
-  width: 90px;
-  text-align: right; }
+#CoordonneesContact {
+  display: flex;
+  justify-content: space-between;
+  text-align: center; }
 
-#CONTACT input, textarea {
-  /* Pour s'assurer que tous les champs texte ont la même police.
-     Par défaut, les textarea ont une police monospace */
-  font: 1em sans-serif;
-  /* Pour que tous les champs texte aient la même dimension */
-  width: 300px;
-  box-sizing: border-box;
-  /* Pour harmoniser le look & feel des bordures des champs texte */
-  border: solid 1 px #777445; }
+.nomContact input {
+  width: 200px;
+  height: 30px;
+  border-radius: 1em;
+  border: 0px;
+  margin: 20px 0 20px 0; }
 
-#CONTACT input:focus, #contact textarea:focus {
-  /* Pour souligner légèrement les éléments actifs */
-  border: solid 1 px #777445; }
+#messageContact textarea {
+  width: 450px;
+  height: 150px;
+  border-radius: 1em;
+  border: 0px;
+  margin-top: 20px; }
 
-#CONTACT textarea {
-  /* Pour aligner les champs texte multi‑ligne avec leur étiquette */
-  vertical-align: top;
-  /* Pour donner assez de place pour écrire du texte */
-  height: 5em; }
-
-#CONTACT .button {
-  /* Pour placer le bouton à la même position que les champs texte */
-  padding-left: 90px;
-  /* même taille que les étiquettes */ }
-
-#CONTACT button {
-  /* Cette marge supplémentaire représente grosso modo le même espace que celui
-     entre les étiquettes et les champs texte */
-  margin-left: .5em; }
+#ErrorMailContact.closed, #SuccessMailContact.closed {
+  display: none; }
 
 /* --------------------------------- footer ------------------------- */
 #footer h3, #footer p {
