--- a/style.scss
+++ b/style.scss
@@ -8,9 +8,9 @@ html, body, #bloc_page {
     height: 100%;
 }
 body {
-    background: url(ressources/Carte\ ancienne.jpg);
+    background: url(ressources/Fond.jpeg);
     background-size: cover;
-    background-attachment: local;
+    background-attachment: fixed;
     margin: 0px;
     text-align: center;
     display: flex;
@@ -27,13 +27,19 @@ body {
 .btnPerso {
   margin: 10px 0 20px 0;
   display: inline-block;
-  height: 40px;
-  width: 170px;
+  height: auto;
+  width: auto;
+  padding:5px;
   border-radius: 1em;
   background-color: rgba(128, 128, 128, 0.363);
   cursor: pointer;
   font-size: 2rem;
   font-family: $Police;
+}
+
+a:link, a:visited, a:hover, a:active {
+  text-decoration: none;
+  color: black;
 }
 /* ----------------------------------- Bandeau ---------------------------------------------- */
 #bandeau {
@@ -106,20 +112,29 @@ body {
 
 /* ------------------------- Accueil ------------------------------------- */
 #MenuAccueil {
+margin-top: 50px;
 display: flex;
 justify-content: space-around;
 align-items: center;
 }
 
-#news {
+#carrouselAccueil {
   height: 300px;
-  width: 800px;
-  background-color: rgb(255, 255, 255);
-  border-radius: 15px;
-  text-align: justify;
-  margin: 50px;
+  width: 400px;
+  border: 3px solid #F2F2F2;
+  overflow: hidden;
 }
 
+#carrouselAccueil ul {
+  width: 400%; // ---->(x photos * 100%)
+  height: 300px;
+  padding:0; margin:0;
+  list-style: none;
+}
+
+#carrouselAccueil li {
+  float: left;
+}
 
 #meteo {
   background-color: rgba(255, 255, 255, 0.733);
@@ -127,7 +142,7 @@ align-items: center;
   width:300px;
   border-radius: 15px;
   margin-right: 20px;
-  padding-top: 15px;
+  //padding-top: 15px;
 }
 
 #logoMeteo {
@@ -141,25 +156,81 @@ align-items: center;
   align-items: center;
 }
 
+/* -------------------------------- Le Village ---------------------------- */
+.menuVillage {
+  margin: 50px 50px 200px 50px;
+  display: flex;
+  align-items: center;
+}
+
+.menu2Village img {
+  border: 4px solid #F2F2F2;
+}
+
+#Ancre1, #Ancre2, #Ancre3, #toSezanne {
+  margin-top: 20px;
+  transform: scale(1);
+  transition-duration: 300ms;
+  &:hover {
+    transform: scale(1.02);
+  }
+}
+
+#carrouselVillage {
+  height: 350px;
+  width: 500px;
+  border: 3px solid #F2F2F2;
+  overflow: hidden;
+}
+
+#carrouselVillage ul {
+  width: 400%; // ---->(x photos * 100%)
+  height: 350px;
+  padding:0; margin:0;
+  list-style: none;
+}
+
+#carrouselVillage li {
+  float: left;
+}
+
+#carrouselCP {
+  margin: auto;
+  width: 700px;
+  height: 450px;
+  overflow: hidden;
+  border: 3px solid #F2F2F2;
+}
+
+#carrouselCP ul {
+  width: 700%; // ---->(x photos * 100%)
+  height: 450px; //50?
+  padding:0; margin:0;
+  list-style: none;
+}
+
+#carrouselCP li {
+  float: left;
+}
 
 /* ----------------------------------- Demarches ---------------------------- */
 #DEMARCHES {
   background-color: rgb(255, 255, 255);
-  border: solid 1 px $Sitecolor;
-  border-radius: 15px;
+  //border: solid 1 px $Sitecolor;
+  //border-radius: 15px;
   padding: 10px;
-  margin-top: 15px;
+  //margin-top: 15px;
 }
 
-.choixActe, .etatCivil {
+.choixDemarche, .choixActe {
   margin : 10px;
   display: inline-block;
-  border-radius: 15px;
+  //border-radius: 15px;
   cursor: pointer;
   margin-bottom: -10px;
 }
 
-#menuEtatCivil, .menuDemarches {
+#choixDemarche, #menuEtatCivil, .menuDemarches {
   display: flex;
   margin-top: 20px;
   justify-content: space-around;
@@ -168,7 +239,7 @@ align-items: center;
   }
 }
 
-#menuEtatCivil.closed, .menuDemarches.closed {
+#menuEtatCivil.closed, .menuDemarches.closed, #menuAutreDemarche.closed {
   display: none;
 }
 
@@ -186,6 +257,26 @@ align-items: center;
 }
 
 #EtatCivil.active {
+  background-position: -50px 0px;
+  + h3 {
+    color : $Sitecolor;
+  }
+}
+
+#autreDemarche {
+  display: inline-block;
+  height: 50px;
+  width: 50px;
+  background: url(Ressources/logoActeOther.png) 0 0 no-repeat;
+  &:hover {
+    background-position: -50px 0px;
+    }
+  &:hover + h3 {
+        color : $Sitecolor;
+      }
+}
+
+#autreDemarche.active {
   background-position: -50px 0px;
   + h3 {
     color : $Sitecolor;
