--- a/style.scss
+++ b/style.scss
@@ -247,7 +247,7 @@ align-items: center;
   display: inline-block;
   height: 50px;
   width: 50px;
-  background: url(Ressources/LogoActe1.png) 0 0 no-repeat;
+  background: url(ressources/LogoActe1.png) 0 0 no-repeat;
   &:hover {
     background-position: -50px 0px;
     }
@@ -267,7 +267,7 @@ align-items: center;
   display: inline-block;
   height: 50px;
   width: 50px;
-  background: url(Ressources/logoActeOther.png) 0 0 no-repeat;
+  background: url(ressources/logoActeOther.png) 0 0 no-repeat;
   &:hover {
     background-position: -50px 0px;
     }
@@ -287,7 +287,7 @@ align-items: center;
   display: inline-block;
   height: 100px;
   width: 100px;
-  background: url(Ressources/logoNaissance1.png) 0 0 no-repeat;
+  background: url(ressources/logoNaissance1.png) 0 0 no-repeat;
   &:hover {
     background-position: -100px 0px;
     }
@@ -307,7 +307,7 @@ align-items: center;
   display: inline-block;
   height: 100px;
   width: 100px;
-  background: url(Ressources/logoDeces2.png) 0 0 no-repeat;
+  background: url(ressources/logoDeces2.png) 0 0 no-repeat;
   &:hover {
     background-position: -100px 0px;
     }
@@ -327,7 +327,7 @@ align-items: center;
   display: inline-block;
   height: 100px;
   width: 100px;
-  background: url(Ressources/logoMariage2.png) 0 0 no-repeat;
+  background: url(ressources/logoMariage2.png) 0 0 no-repeat;
   &:hover {
     background-position: -100px 0px;
     }
